--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: ZEUNQUSZ ANALYSIS HUB
 description: A simple Jekyll site using Monophase theme.
 baseurl: "" # 사이트 URL 설정
-url: "https://zeunqusz.github.io" # 본인의 GitHub Pages 주소
+url: "https://zeunqusz.github.io" # 본인의 GitHub Pages 주소
 
 plugins:
   - jekyll-remote-theme
