--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,11 @@ plugins:
   - jekyll-remote-theme
 
 remote_theme: zivhub/monophase@main
-
+markdown: kramdown
+kramdown:
+  input: GFM
+  hard_wrap: false
+  
 plugins:
   - jekyll-feed
   - jekyll-paginate
