--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,8 @@ plugins:
   - jekyll-paginate
 paginate: 5 # 한 페이지에 표시할 글 개수
 future: true # 미래 날짜의 글을 표시할지 여부
+
+collections:
+  categories:
+    output: true
+    permalink: /categories/:name/
