--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-nbconvert
 paginate: 5 # 한 페이지에 표시할 글 개수
 future: true # 미래 날짜의 글을 표시할지 여부
 
