--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,6 @@
 - title: Artificial Intelligence
-  url: /about/
+  url: /categories/artificial-intelligence/
 - title: Problem Solving
-  url: /archive/
+  url: /categories/problem-solving/
 - title: Project
-  url: /categories/
-
+  url: /categories/project/
